@@ -328,3 +328,6 @@
 2017-07-17 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug in 'src/rdlogeditb/runlengthwidget.cpp' that caused
 	a segfault when processing a log with no selected items.
+2017-07-18 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'src/common/log.cpp' that caused newly inserted
+	cart events to show a length value of '00:00'.
